feat: add a terminal emulator

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-	"run": "tauri dev"
+    "run": "tauri dev"
   },
   "dependencies": {
     "@tauri-apps/api": "^1",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "pinia": "^2.2.0",
     "vue": "^3.3.4"
   },
