--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,8 @@ serde_json = "1"
 ropey = "1.6.1"
 toml = "0.8.19"
 portable-pty = "0.8.1"
+tokio = { version = "1", features = ["process"] }
+lsp-types = "0.97.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
