--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,8 @@ toml = "0.8.19"
 portable-pty = "0.8.1"
 tokio = { version = "1", features = ["process"] }
 lsp-types = "0.97.0"
+reqwest = { version = "0.12.7" }
+flate2 = "1.0.33"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
